syntax = "proto3";
/**
*用户模块，对外提供用户的查询管理接口
*/
service UserManage {
    //根据数量返回用户信息列表
    rpc GetUserListByOffstAndLimit(GetUserListReq) returns (UserListRsp) {}
    //根据用户id更新用户信息
    rpc UpdateUserById(ChangeUserReq) returns (ChangeUserRsp) {}
    //新增用户
    rpc AddUser(AddUserReq) returns (AddUserRsp) {}
    //根据用户id删除用户
    rpc DeleteUserById(DeleteUserReq) returns (DeleteUserRsp) {}
    //根据用户id返回用户信息
    rpc GetUserById(GetUserByIdReq) returns (UserMesssage) {}
    //登陆验证
    rpc Login(LoginReq) returns (LoginRsp) {}
    //修改密码
    rpc UpdateUserPwd(UpdatePwdReq) returns (UpdatePwdRsp) {}
}

message UserMesssage {
    int64 id = 1;//用户id
    string login_name = 2;//登录名
    string pwd = 3;//密码
    string name = 4;//用户名
    string phone_number = 5;//手机号码
    string job_number = 6;//工号
    int32 permission = 7;//权限
    int32 gender = 8;//性别
    bool deleted = 9;//是否删除
}

message UpdatePwdReq {
    int64 userId = 1;
    string oldPwd = 2;
    string newPwd = 3;
}

message UpdatePwdRsp {
    string message = 1;
}

message LoginReq {
    string  username = 1;
    string  pwd = 2;
}

message LoginRsp {
    bool loginFlag = 1;
    int64 userId = 2;
    int32 permission = 3;
    string  token = 4;
}

message GetUserListReq {
    int32 offset = 1;
    int32 limit = 2;
    int64 manageId = 3;
}


message UserListRsp {
    repeated UserMesssage userList= 1;
}

message ChangeUserReq {
    int64 changeId = 1;
    string name = 2;
    string loginName = 3;
    string phoneNumber = 4;
    string jobNumber = 5;
    int32 gender = 6;
}

message ChangeUserRsp {
    string message = 1;
    int64 userId = 2;
}

message AddUserReq {
    string name = 1;
    string loginName = 2;
    string phoneNumber = 3;
    string jobNumber = 4;
    int32 gender = 5;
}

message AddUserRsp {
    string message = 1;
    int64 userId = 2;
}

message DeleteUserReq {
    int64 deleteId = 1;
}

message DeleteUserRsp {
    string message = 1;
    int64 userId = 2;
}

message GetUserByIdReq {
    int64 userId = 1;//用户id
}
